--- a/index.html
+++ b/index.html
@@ -1,17 +1,61 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <title>Example</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Do not add `link` tags-->
-      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<head>
+  <title># TicTacToe</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Do not add `script` tags-->
-      <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
-      <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
-    </head>
-    <body>
-      <h1>Browser Template</h1>
-    </body>
+  <!-- Do not add `link` tags-->
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Do not add `script` tags-->
+  <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
+  <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
+</head>
+
+<body>
+  <header>
+    <h1>#TicTacToe</h1>
+  </header>
+  <div class="container">
+
+    <div class="top-row">
+      <div class="col-sm-4">
+        1
+      </div>
+      <div class="col-sm-4">
+        2
+      </div>
+      <div class="col-sm-4">
+        3
+      </div>
+    </div>
+
+    <div class="middle-row">
+      <div class="col-sm-4">
+        4
+      </div>
+      <div class="col-sm-4">
+        5
+      </div>
+      <div class="col-sm-4">
+        6
+      </div>
+    </div>
+
+    <div class="bottom-row">
+      <div class="col-sm-4">
+        7
+      </div>
+      <div class="col-sm-4">
+        8
+      </div>
+      <div class="col-sm-4">
+        9
+      </div>
+
+    </div>
+  </div>
+</body>
+
 </html>
