--- a/index.html
+++ b/index.html
@@ -14,45 +14,28 @@
 </head>
 
 <body>
+
   <header>
     <h1>#TicTacToe</h1>
   </header>
   <div class="container">
 
     <div class="top-row">
-      <div class="col-sm-4">
-        1
-      </div>
-      <div class="col-sm-4">
-        2
-      </div>
-      <div class="col-sm-4">
-        3
-      </div>
+      <div id="1" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">1</div>
+      <div id="2" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">2</div>
+      <div id="3" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">3</div>
     </div>
 
     <div class="middle-row">
-      <div class="col-sm-4">
-        4
-      </div>
-      <div class="col-sm-4">
-        5
-      </div>
-      <div class="col-sm-4">
-        6
-      </div>
+      <div id="4" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">4</div>
+      <div id="5" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">5</div>
+      <div id="6" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">6</div>
     </div>
 
     <div class="bottom-row">
-      <div class="col-sm-4">
-        7
-      </div>
-      <div class="col-sm-4">
-        8
-      </div>
-      <div class="col-sm-4">
-        9
-      </div>
+      <div id="7" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">7</div>
+      <div id="8" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">8</div>
+      <div id="9" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">9</div>
 
     </div>
   </div>
