--- a/index.html
+++ b/index.html
@@ -14,29 +14,29 @@
 </head>
 
 <body>
-
-  <header>
-    <h1>#TicTacToe</h1>
-  </header>
-  <div class="container">
-
+  <nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand">Navbar</a>
+    <form class="form-inline">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </nav>
+  <h1>#TicTacToe</h1>
+  <div id="game-board" class="container">
     <div class="top-row">
       <div id="1" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">1</div>
       <div id="2" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">2</div>
       <div id="3" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">3</div>
     </div>
-
     <div class="middle-row">
       <div id="4" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">4</div>
       <div id="5" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">5</div>
       <div id="6" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">6</div>
     </div>
-
     <div class="bottom-row">
       <div id="7" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">7</div>
       <div id="8" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">8</div>
       <div id="9" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">9</div>
-
     </div>
   </div>
 </body>
