New api url & made game board look good and square
-Board looks good on phone
-todo: make board centered in screen no matter what

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </button>
   </nav>
   <h1 class="hero-text">#TicTacToe</h1>
-  <div id="game-board" class="container game-board">
+  <div id="game-board" class="container h-100 game-board">
     <div class="top-row">
       <div id="1" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">1</div>
       <div id="2" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">2</div>
