--- a/index.html
+++ b/index.html
@@ -16,40 +16,57 @@
 <body>
   <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand">Navbar</a>
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-      Launch demo modal
+
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#sign-up">
+      Sign Up
     </button>
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-      Launch demo modal
+
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#sign-in">
+      Sign In
     </button>
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-      Launch demo modal
+
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#change-password">
+      change-password
+    </button>
+
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#log-out">
+      log-out
     </button>
   </nav>
   <h1 class="hero-text">#TicTacToe</h1>
-  <div id="game-board" class="container h-100 game-board">
-    <div class="top-row">
-      <div id="1" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">1</div>
-      <div id="2" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">2</div>
-      <div id="3" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">3</div>
+  <div class="main-content container-fluid">
+    <div class="row">
+      <div class="h-100 col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 player-x-content">
+      THIS IS WHERE X GOES
     </div>
-    <div class="middle-row">
-      <div id="4" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">4</div>
-      <div id="5" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">5</div>
-      <div id="6" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">6</div>
+      <div id="game-board" class="h-100 game-board col-xs-8 col-sm-8 col-md-8 col-lg-8 col-xl-8">
+      <div class="top-row">
+        <div id="1" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">1</div>
+        <div id="2" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">2</div>
+        <div id="3" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">3</div>
+      </div>
+      <div class="middle-row">
+        <div id="4" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">4</div>
+        <div id="5" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">5</div>
+        <div id="6" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">6</div>
+      </div>
+      <div class="bottom-row">
+        <div id="7" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">7</div>
+        <div id="8" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">8</div>
+        <div id="9" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">9</div>
+      </div>
     </div>
-    <div class="bottom-row">
-      <div id="7" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">7</div>
-      <div id="8" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">8</div>
-      <div id="9" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">9</div>
+      <div  class="h-100 col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 player-o-content">
+      THIS IS WHERE O GOES
+    </div>
     </div>
   </div>
   <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="sign-up" tabindex="-1" role="dialog" aria-labelledby="sign-up" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Sign Up Here!</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -80,6 +97,118 @@
       </div>
     </div>
   </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="sign-in" tabindex="-1" role="dialog" aria-labelledby="sign-in" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Sign In</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        </div>
+        <div class="modal-body">
+          ...
+          <form>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Password</label>
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            </div>
+            <div class="form-group form-check">
+              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="change-password" tabindex="-1" role="dialog" aria-labelledby="change-password" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Change Password</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        </div>
+        <div class="modal-body">
+          ...
+          <form>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Password</label>
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            </div>
+            <div class="form-group form-check">
+              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="log-out" tabindex="-1" role="dialog" aria-labelledby="log-out" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Log Out</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        </div>
+        <div class="modal-body">
+          ...
+          <form>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Password</label>
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            </div>
+            <div class="form-group form-check">
+              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <footer>Made with love</footer>
 </body>
 
