--- a/index.html
+++ b/index.html
@@ -37,28 +37,28 @@
   <div class="main-content container-fluid">
     <div class="row">
       <div class="h-100 col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 player-x-content">
-      THIS IS WHERE X GOES
-    </div>
+        THIS IS WHERE X GOES
+      </div>
       <div id="game-board" class="h-100 game-board col-xs-8 col-sm-8 col-md-8 col-lg-8 col-xl-8">
-      <div class="top-row">
-        <div id="1" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">1</div>
-        <div id="2" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">2</div>
-        <div id="3" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">3</div>
+        <div class="top-row">
+          <div id="1" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">1</div>
+          <div id="2" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">2</div>
+          <div id="3" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">3</div>
+        </div>
+        <div class="middle-row">
+          <div id="4" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">4</div>
+          <div id="5" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">5</div>
+          <div id="6" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">6</div>
+        </div>
+        <div class="bottom-row">
+          <div id="7" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">7</div>
+          <div id="8" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">8</div>
+          <div id="9" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">9</div>
+        </div>
       </div>
-      <div class="middle-row">
-        <div id="4" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">4</div>
-        <div id="5" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">5</div>
-        <div id="6" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">6</div>
+      <div class="h-100 col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 player-o-content">
+        THIS IS WHERE O GOES
       </div>
-      <div class="bottom-row">
-        <div id="7" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">7</div>
-        <div id="8" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">8</div>
-        <div id="9" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">9</div>
-      </div>
-    </div>
-      <div  class="h-100 col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 player-o-content">
-      THIS IS WHERE O GOES
-    </div>
     </div>
   </div>
   <!-- Modal -->
@@ -136,7 +136,7 @@
   </div>
 
   <!-- Modal -->
-  <div class="modal fade" id="change-password-modal" tabindex="-1" role="dialog" aria-labelledby="change-password" aria-hidden="true">
+  <div class="modal fade" id="change-password" tabindex="-1" role="dialog" aria-labelledby="change-password" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
