--- a/index.html
+++ b/index.html
@@ -106,27 +106,19 @@
         </button>
         </div>
         <div class="modal-body">
-          ...
+          Fill in the form to Sign In!
           <form>
             <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="sign-in-InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-              <small id="sign-in-emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+              <label for="sign-in-InputEmail1">Email address</label>
+              <input name="credentials[email]" type="email" class="form-control" id="sign-in-InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
             </div>
             <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="sign-in-InputPassword1" placeholder="Password">
-            </div>
-            <div class="form-group form-check">
-              <input type="checkbox" class="form-check-input" id="sign-in-Check1">
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
+              <label for="sign-in-InputPassword1">Password</label>
+              <input name="credentials[password]" type="password" class="form-control" id="sign-in-InputPassword1" placeholder="Password">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
         </div>
       </div>
     </div>
