-Completed log out functionality - Finished Auth
-user can log out after they are logged in
-done with auth branch
-toDo: game events, api, ui

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
       log-out
     </button>
   </nav>
+
   <h1 class="hero-text">#TicTacToe</h1>
+
   <div class="main-content container-fluid">
     <div class="row">
       <div class="h-100 col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 player-x-content">
@@ -61,7 +63,7 @@
       </div>
     </div>
   </div>
-  <!-- Modal -->
+  <!-- sign up Modal -->
   <div class="modal fade" id="sign-up" tabindex="-1" role="dialog" aria-labelledby="sign-up" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -95,7 +97,7 @@
     </div>
   </div>
 
-  <!-- Modal -->
+  <!-- sign in Modal -->
   <div class="modal fade" id="sign-in" tabindex="-1" role="dialog" aria-labelledby="sign-in" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -124,7 +126,7 @@
     </div>
   </div>
 
-  <!-- Modal -->
+  <!-- change password Modal -->
   <div class="modal fade" id="change-password" tabindex="-1" role="dialog" aria-labelledby="change-password" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -153,7 +155,7 @@
     </div>
   </div>
 
-  <!-- Modal -->
+  <!-- log out Modal -->
   <div class="modal fade" id="log-out" tabindex="-1" role="dialog" aria-labelledby="log-out" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -161,30 +163,14 @@
           <h5 class="modal-title" id="log-out-ModalLabel">Log Out</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
-        </button>
+          </button>
         </div>
         <div class="modal-body">
-          ...
+          Are you sure you want to sign out?
           <form>
-            <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="email" class="form-control" id="log-out-InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-              <small id="log-out-emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-            </div>
-            <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="log-out-InputPassword1" placeholder="Password">
-            </div>
-            <div class="form-group form-check">
-              <input type="checkbox" class="form-check-input" id="log-out-Check1">
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Sign Out</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
           </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
         </div>
       </div>
     </div>
