--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 
   <div class="main-content container-fluid">
     <div class="row">
-      <div class="h-100 col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 player-x-content">
+      <div class="h-100 col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 player-x-content">
         THIS IS WHERE X GOES
       </div>
-      <div id="game-board" class="h-100 game-board col-xs-8 col-sm-8 col-md-8 col-lg-8 col-xl-8">
+      <div id="game-board" class="h-100 game-board col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
         <div class="top-row">
           <div id="1" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">.</div>
           <div id="2" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">.</div>
@@ -58,7 +58,7 @@
           <div id="9" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 game-cells">.</div>
         </div>
       </div>
-      <div class="h-100 col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 player-o-content">
+      <div class="h-100 col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 player-o-content">
         THIS IS WHERE O GOES
       </div>
     </div>
@@ -175,6 +175,48 @@
       </div>
     </div>
   </div>
+
+<!-- you have won Modal -->
+<div class="modal" id="winner" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Winner!!! </h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Congrats you have won, would you like to play again?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary">Play Again</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Game is a draw Modal -->
+<div class="modal" id="draw" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">It's a Draw!!</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Congrats! You both lose! </p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary">Play Again?</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
   <footer>Made with love</footer>
 </body>
