-Game is reset when user decides to play Again
-when user clicks playagain the game resets
-toDo: hide elements depending on if signed in
-toDo: push games to API

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <div class="modal-body">
           Are you sure you want to sign out?
           <form>
-            <button type="submit" class="btn btn-primary">Sign Out</button>
+            <button type="button" class="btn btn-primary">Sign Out</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
           </form>
         </div>
@@ -190,7 +190,7 @@
         <p>Congrats you have won, would you like to play again?</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary">Play Again</button>
+        <button type="button" class="btn btn-primary play-again">Play Again?</button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
@@ -211,7 +211,7 @@
         <p>Congrats! You both lose! </p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary">Play Again?</button>
+        <button type="submit" class="btn btn-primary play-again">Play Again?</button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
