--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         <div class="modal-body">
           Are you sure you want to sign out, player O?
           <form>
-            <button type="button" class="btn btn-primary">Sign Out</button>
+            <button type="submit" class="btn btn-primary">Sign Out</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
           </form>
         </div>
