--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div class="row">
       <div class="h-100 col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 player-x-content">
         PLAYER X <br>
+        <p id="player-x-info"></p>
         <button type="button" class="btn btn-primary player-x-sign-in" data-toggle="modal" data-target="#sign-in-x">
           Sign In
         </button> <br>
@@ -56,6 +57,7 @@
       </div>
       <div class="h-100 col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 player-o-content">
         PLAYER O <br>
+        <p id="player-o-info"></p>
         <button type="button" class="btn btn-primary player-o-sign-in" data-toggle="modal" data-target="#sign-in-o">
           Sign In
         </button> <br>
